# CHIP-8

./: CMakeLists.txt  LICENSE.md  README.md
libs/glad/: glad.c  glad.h
src/: main.c
src/Chip8/: Chip8.c  Chip8.h
src/graphics/: GFXscreen.c  GFXscreen.h  shader.frag  shader.vert
src/utility/: utility.c  utility.h
